// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disabled ids Roles shouldn't be rendered 1`] = `
<div>
  <span>
    <i />
  </span>
</div>
`;

exports[`disabled ids common Should merge classes 1`] = `
<div
  className="test-class existed-class"
/>
`;

exports[`disabled ids common Should pass className to the child 1`] = `
<div
  className="test-class"
/>
`;

exports[`disabled ids common Should pass unknown props to the child 1`] = `
<div
  unknownProp="value"
/>
`;

exports[`disabled ids common render props 1`] = `
<div>
  <span>
    <i />
  </span>
</div>
`;

exports[`enabled ids Roles should be rendered 1`] = `
<div
  data-test-id="parent"
>
  <span
    data-test-id="parent:child"
  >
    <i
      data-test-id="absolute"
    />
  </span>
</div>
`;

exports[`enabled ids common Should merge classes 1`] = `
<div
  className="test-class existed-class"
  data-test-id="parent"
/>
`;

exports[`enabled ids common Should pass className to the child 1`] = `
<div
  className="test-class"
  data-test-id="parent"
/>
`;

exports[`enabled ids common Should pass unknown props to the child 1`] = `
<div
  data-test-id="parent"
  unknownProp="value"
/>
`;

exports[`enabled ids common render props 1`] = `
<div
  data-test-id="parent"
>
  <span
    data-test-id="parent:child"
  >
    <i
      data-test-id="absolute"
    />
  </span>
</div>
`;
